--- a/index.html
+++ b/index.html
@@ -20,36 +20,73 @@
 <body>
 
   <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light static-top">
-  <div class="nav-container">
+  <nav class="navbar nav-container navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">
-          <img src="/img/navbar-logo/logo.png" alt="">
-        </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-    <div class="collapse navbar-collapse" id="navbarResponsive">
-      <ul class="navbar-nav ml-auto">
+      <img src="/img/navbar-logo/logo.png" alt="">
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+  
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home
-                <span class="sr-only">(current)</span>
-              </a>
+          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About</a>
+          <a class="nav-link" href="#">Link</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Contact</a>
+          <a class="nav-link disabled" href="#">Disabled</a>
         </li>
       </ul>
     </div>
+  </nav>
+  <!-- navbar end -->
+
+  <!-- form -->
+  <div class="form-container">
+    <div class="container">
+
+      <h2>Registration form</h2>
+      <form class="form-horizontal" method="post" action="">
+
+        <div class="form-group">
+          <div class="col-sm-8">
+              <input type="text" class="form-control" id="fullname" placeholder="Enter Your name" name="fullname">
+          </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-sm-8">
+                <input type="text" class="form-control" id="cellno" placeholder="Enter Your Cell No" name="cellno">
+            </div>
+          </div>
+
+        <div class="form-group">
+          <div class="col-sm-8">
+            <input type="email" class="form-control" id="email" placeholder="Enter Your email" name="email">
+          </div>
+        </div>
+
+        <div class="form-group">
+          <div class="col-sm-8">          
+            <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd">
+          </div>
+        </div>
+      
+        <div class="form-group">        
+          <div class="col-sm-offset-2 col-sm-10">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+
+      </form>
+    </div>
   </div>
-</nav>
-
-
+ 
+    <!-- form end -->
+  
 
 </body>
  <!-- Bootstrap core JavaScript -->
