added contact area

--- a/index.html
+++ b/index.html
@@ -28,17 +28,20 @@
       <span class="navbar-toggler-icon"></span>
     </button>
   
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
+    <div class="collapse navbar-collapse" id="navbarToggler">
       <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
         <li class="nav-item active">
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" href="#">Disabled</a>
+          <a class="nav-link" href="#">Results</a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">Contact</a>
+          </li>
       </ul>
     </div>
   </nav>
@@ -84,8 +87,60 @@
       </form>
     </div>
   </div>
- 
     <!-- form end -->
+  
+    <!-- success stories section -->
+    <section class="section-bg-cover" >
+      <div class="container">
+          <div class="col-lg-6 col-sm-8">
+            <div class="p-4">
+              <h2 class="section-title">Success Stories</h2>
+              <p>•	We have successfully sent more than 47000 students to various professional Colleges and Universities</p>
+              <p>•	Over 300 students prepared by Anees Hussain were admitted to IBA in 2018 alone</p>
+              <p>•	Over 1850 students prepared by Anees Hussain were admitted to IBA over the last 7 years</p>
+              <p>•	Over 750 students admitted to CBM and SZABIST in 2018 </p>
+              <p>•	Over 3,200 students admitted to all prominent Medical and Engineering Universities in 2018 </p>
+            </div>
+          </div>
+        </div>
+    </section>
+    <!-- success stories section end -->
+
+
+  <!-- Contact Section -->
+  <section class="page-section" id="contact">
+      <div class="contact-container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 text-center">
+            <h2 class="mt-0">Let's Get In Touch!</h2>
+            <hr class="divider my-4">
+            <p class="text-muted mb-5">Ready to start your next project with us? Give us a call or send us an email and we will get back to you as soon as possible!</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 ml-auto text-center">
+            <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
+            
+            <div>+920000000000</div>
+            Sample text</br></br>
+            <div>+9200000000000</div>
+            sample text
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
+            <!-- Make sure to change the email address in anchor text AND the link below! -->
+            <a class="d-block" href="mailto:sacodevelopers@gmail.com">sacodevelopers@gmail.com</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+      <!-- Footer -->
+  <footer class="bg-light py-4">
+      <div class="container">
+        <div class="small text-center text-muted">Copyright &copy; 2019 - Anees Hussain Acadmey</div>
+      </div>
+    </footer>
   
 
 </body>
