--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
   <div class="form-container">
     <div class="container">
 
-      <h2>Registration form</h2>
+      <h2>Test Preparation Courses - Registration Form</h2>
       <form class="form-horizontal" method="post" action="">
 
         <div class="form-group">
           <div class="col-sm-8">
-              <input type="text" class="form-control" id="fullname" placeholder="Enter Your name" name="fullname">
+              <input type="text" class="form-control" id="fullname" placeholder="Enter Your Name" name="fullname">
           </div>
         </div>
 
@@ -66,17 +66,46 @@
             </div>
           </div>
 
+          <div class="form-group">
+              <div class="col-sm-8">
+                  <input type="text" class="form-control" id="tellno" placeholder="Enter Your Telephone No" name="tellno">
+              </div>
+            </div>
+  
+
         <div class="form-group">
           <div class="col-sm-8">
-            <input type="email" class="form-control" id="email" placeholder="Enter Your email" name="email">
+            <input type="email" class="form-control" id="email" placeholder="Enter Your Email" name="email">
           </div>
         </div>
 
         <div class="form-group">
-          <div class="col-sm-8">          
-            <input type="password" class="form-control" id="pwd" placeholder="Enter password" name="pwd">
+          <div class="col-sm-8"> 
+          <span>which Courses do you wish ti join ?</span>      
+              <select name="courses">
+                  <option value="BCat">BCat(IBA CBM SZABIST etc)</option>
+                  <option value="MCAT">MCAT(Medical Colleges Admission Test)</option>
+                  <option value="ECAT">ECAT(Engineering Colleges Admission Test)</option>
+                  <option value="SAT">SAT</option>
+                  <option value="IELTS">IELTS</option>
+                  <option value="GMAT">GMAT</option>
+                  <option value="GRE">GRE</option>
+                  <option value="IndusVelly ">Indus Velly Test Preperation</option>
+                </select>
           </div>
         </div>
+  
+        <div class="form-group">
+            <div class="col-sm-8"> 
+              <span> Which Anees Hussain Campus do you wish to join?  </span>   
+                <select name="campus">
+                    <option value="Defence">Defence(DHA Phase 4)</option>
+                    <option value="Gulshan">Gulshan(NPA)</option>
+                    <option value="Bahadurabad">Bahadurabad</option>
+                    <option value="north">North Nazimabad</option>
+                  </select>
+            </div>
+          </div> 
       
         <div class="form-group">        
           <div class="col-sm-offset-2 col-sm-10">
@@ -129,19 +158,20 @@
           <div class="col-lg-4 mr-auto text-center">
             <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
             <!-- Make sure to change the email address in anchor text AND the link below! -->
-            <a class="d-block" href="mailto:sacodevelopers@gmail.com">sacodevelopers@gmail.com</a>
+            <a class="d-block" href="mailto:samples@gmail.com">sample@gmail.com</a>
           </div>
         </div>
       </div>
-    </section>
+  </section>
+    <!-- contact section closed -->
 
       <!-- Footer -->
-  <footer class="bg-light py-4">
+   <footer class="bg-light py-4">
       <div class="container">
         <div class="small text-center text-muted">Copyright &copy; 2019 - Anees Hussain Acadmey</div>
       </div>
     </footer>
-  
+  <!-- footer close -->
 
 </body>
  <!-- Bootstrap core JavaScript -->
