--- a/index.html
+++ b/index.html
@@ -37,15 +37,15 @@
           <a class="nav-link" href="#">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Results</a>
+          <a class="nav-link" href="#testimonials">Testimonials</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contact">Contact</a>
           </li>
       </ul>
     </div>
   </nav>
-  <!-- navbar end -->
+  <!-- navigation end -->
 
   <!-- form -->
   <div class="form-container">
@@ -116,8 +116,45 @@
       </form>
     </div>
   </div>
-    <!-- form end -->
+  <!-- form end -->
   
+  <!-- funfacts -->
+  <section class="section-sm bg-primary">
+    <div class="container">
+      <div class="row">
+        <!-- funfacts item -->
+        <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
+          <div class="text-center">
+            <h2 class="count text-white" data-count="60">5</h2>
+            <h5 class="text-white">TEACHERS</h5>
+          </div>
+        </div>
+        <!-- funfacts item -->
+        <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
+          <div class="text-center">
+            <h2 class="count text-white" data-count="50">15+</h2>
+            <h5 class="text-white">COURSES</h5>
+          </div>
+        </div>
+        <!-- funfacts item -->
+        <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
+          <div class="text-center">
+            <h2 class="count text-white" data-count="1000">645+</h2>
+            <h5 class="text-white">STUDENTS</h5>
+          </div>
+        </div>
+        <!-- funfacts item -->
+        <div class="col-md-3 col-sm-6 mb-4 mb-md-0">
+          <div class="text-center">
+            <h2 class="count text-white" data-count="3737">2500+</h2>
+            <h5 class="text-white"> Passed Outs</h5>
+          </div>
+        </div>
+      </div>
+    </div>
+    </section>
+  <!-- /funfacts -->
+
     <!-- success stories section -->
     <section class="section-bg-cover" >
       <div class="container">
@@ -135,6 +172,46 @@
     </section>
     <!-- success stories section end -->
 
+    <!-- testimonials section -->
+    <section class="testimonials" id="testimonials">
+        <div class="testimonials-container">
+            <h2>Testimonials</h2>
+
+            <div class="card">
+              <img class="card-img-top" src="img/boy1.png" alt="Card image" style="width:100%">
+              <div class="card-body">
+                <h4 class="card-title">Syed Sadiq</h4>
+                <p class="card-text">One of the best learning experiences I have ever come across. The teaching style and communication abilities of the teachers are very good. Their ability to make the classes friendly is awesome, which is the basic reason one does not hesitate in asking questions.</p>
+              </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img-top" src="img/boy1.png" alt="Card image" style="width:100%">
+                <div class="card-body">
+                  <h4 class="card-title">Sameer Sarwar</h4>
+                  <p class="card-text">Salman has been a great teacher and inspiration to me. The environment has been very cooperative and friendly, and has helped to boost our morale, encouraging us to work harder. </p>
+                </div>
+            </div>
+
+            <div class="card">
+                <img class="card-img-top" src="img/boy1.png" alt="Card image" style="width:100%">
+                <div class="card-body">
+                  <h4 class="card-title">Rabia Kazmi</h4>
+                  <p class="card-text">Anees Hussain’s classes were competitive and full of humor and insight. The environment created encourages students to study in groups and get to know each other. The congeniality increases enjoyment and interest, which really pays off. </p>
+                </div>
+              </div>
+
+              <div class="card">
+                  <img class="card-img-top" src="img/boy1.png" alt="Card image" style="width:100%">
+                  <div class="card-body">
+                    <h4 class="card-title">Rohit Luhana</h4>
+                    <p class="card-text">It was a great experience in terms of studying and learning new things with new techniques. The thing I loved about this institution that they work really hard for students and even give individual attention after the class.</p>
+                  </div>
+                </div>
+
+          </div>
+    </section>
+    <!-- testimonials section end -->
 
   <!-- Contact Section -->
   <section class="page-section" id="contact">
